Fixing AIRAVATA-691
git-svn-id: https://svn.apache.org/repos/asf/airavata/trunk@1428412 13f79535-47bb-0310-9956-ffa450edef68