@@ -153,6 +153,11 @@
                             <cargo.servlet.port>${test.running.port}</cargo.servlet.port>
                             <cargo.tomcat.ajp.port>9009</cargo.tomcat.ajp.port>
                             <cargo.rmi.port>9099</cargo.rmi.port>
+                            <cargo.jvmargs>
+                                -Xms512m
+                                -Xmx512m
+                                -XX:MaxPermSize=256m
+                            </cargo.jvmargs>
                             <!--cargo.jvmargs>
                                 -Xdebug
                                 -Xrunjdwp:transport=dt_socket,server=y,suspend=${cargo.debug.suspend},address=${cargo.debug.address}
